added permanent test data